@@ -30,22 +30,24 @@ chkdvifont.log: chkdvifont$(EXEEXT)
 EXTRA_DIST = $(TESTS)
 
 ## dvispc.test
-EXTRA_DIST += tests/test.spc \
-	tests/test.tex tests/test.dvi tests/testout.dvi \
+EXTRA_DIST += tests/oldindep.spc \
 	tests/oldindep.tex tests/oldindep.dvi tests/oldindepout.dvi \
-	tests/longspec.tex tests/longspec.dvi tests/longspecout.dvi
-DISTCLEANFILES = x*test.spc \
-	x*testa.txt x*testax.dvi \
-	x*testout.dvi x*oldindepout.dvi x*longspecout.dvi \
+	tests/reverse.tex tests/reverse.dvi tests/reverseout.dvi \
+	tests/annot.tex tests/annot.dvi \
+	tests/longspec.tex tests/longspec.dvi \
+	tests/flatnest.tex tests/flatnest.dvi
+DISTCLEANFILES = x*oldindep.spc \
+	x*oldindepa.txt x*oldindepax.dvi x*oldindepout.dvi \
+	x*reverseout.dvi \
 	x*write.dvi x*writeout.dvi
 
 ## chkdvifont.test
-EXTRA_DIST += tests/test.cfn \
+EXTRA_DIST += tests/oldindep.cfn \
 	tests/jis.tfm tests/jis.cfn \
 	tests/eufm10.tfm tests/eufm10.cfn \
 	tests/cmr10.pk tests/cmr10.cfn \
 	tests/upjisr-h.vf tests/upsjir-h.cfn
-DISTCLEANFILES += test.dvi xtest.cfn \
+DISTCLEANFILES += oldindep.dvi xoldindep.cfn \
 	xjis.cfn xeufm10.cfn xeufm10.ed.cfn \
 	xcmr10.cfn xupjisr-h.cfn
 
