@@ -10,15 +10,15 @@ testdir=$srcdir/tests
 # if 'diff --strip-trailing-cr' is available, exploit it.
 # (useful for tests on win32 binaries run on MSYS shell)
 diffoptCRLF=
-diff --strip-trailing-cr $testdir/test.spc $testdir/test.spc \
+diff --strip-trailing-cr $testdir/oldindep.cfn $testdir/oldindep.cfn \
   && diffoptCRLF=--strip-trailing-cr || echo
 
 
 ## DVI mode
 
-cp $testdir/test.dvi . && \
-  ./chkdvifont -c ./test.dvi > xtest.cfn && \
-  diff $diffoptCRLF $testdir/test.cfn xtest.cfn && echo || exit 1
+cp $testdir/oldindep.dvi . && \
+  ./chkdvifont -c ./oldindep.dvi > xoldindep.cfn && \
+  diff $diffoptCRLF $testdir/oldindep.cfn xoldindep.cfn && echo || exit 1
 
 
 ## TFM/JFM mode
@@ -31,6 +31,7 @@ cp $testdir/test.dvi . && \
   if [ $? -ne 4 ]; then exit 3; fi
   sed 's!2.0/2.1!2.0 or newer!' xeufm10.cfn > xeufm10.ed.cfn
   diff $diffoptCRLF $testdir/eufm10.cfn xeufm10.ed.cfn && echo || exit 3
+
 
 ## FONT mode
 
@@ -45,6 +46,7 @@ echo M | ./chkdvifont && echo || exit 0
 
 ./chkdvifont -c $testdir/upjisr-h.vf > xupjisr-h.cfn && \
   diff $diffoptCRLF $testdir/upjisr-h.cfn xupjisr-h.cfn && echo || exit 5
+
 
 exit 0
 
