@@ -1,0 +1,12 @@
+% page independence of annotation
+\documentclass[a4paper,dvipdfmx]{article}
+\usepackage[colorlinks=true]{hyperref}
+\textheight3cm
+\begin{document}
+Here starts hyperlink:
+\href{https://ctan.org/}{CTAN} ended.
+\href{https://tug.org/}%
+{TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG
+ TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG}
+Again starts hyperlink: \href{https://ctan.org/}{CTAN} all done!
+\end{document}
