@@ -1,9 +1,11 @@
+% page independence of long special (annotation)
 \documentclass[dvipdfmx]{article}
 \usepackage{hyperref}
 \begin{document}
+B\par
 \noindent
 % length of special: 282 (0x0000011A)
 \href{https://www.tug.org/svn/texlive/trunk/Master/texmf-dist/tex/generic/pgf/frontendlayer/tikz/libraries/datavisualization/tikzlibrarydatavisualization.formats.functions.code.tex?revision=20236&view=markup}{%
-A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\%
-A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A\\A}
+A\\[42\baselineskip]A\\%
+A\\[20\baselineskip]A\\A\\A\\A\\A}
 \end{document}
