@@ -1,0 +1,25 @@
+[1]
+{papersize=614.295pt,794.96999pt}
+{color push  Black}
+{color pop}
+{background rgb 1 0 0}
+{color push  Black}
+{color pop}
+[2]
+{color push  Black}
+{color pop}
+{color push rgb 0 0 1}
+{color push  Black}
+{color pop}
+[3]
+{color push  Black}
+{color pop}
+{background gray 1}
+{color pop}
+{color push  Black}
+{color pop}
+[4]
+{color push  Black}
+{color pop}
+{color push  Black}
+{color pop}
