@@ -1,3 +1,4 @@
+% page independence (backward compatible)
 \documentclass{article}
 \usepackage[dvips]{color}
 \begin{document}
