@@ -1,0 +1,31 @@
+% page independence in reverse order too
+\documentclass{article}
+\usepackage[dvips]{color}
+\textheight3cm
+\begin{document}
+\Huge
+white
+\newpage
+white
+\newpage
+\pagecolor{red}
+red
+\newpage
+red
+\newpage
+red
+\newpage
+\pagecolor{white}
+white
+\newpage
+black
+\newpage
+{\color{red}
+red
+\newpage
+red
+\newpage
+red}
+\newpage
+black
+\end{document}
