@@ -1,99 +1,0 @@
-[1]
-{pdf:docinfo<</Title()/Subject()/Creator(LaTeX with hyperref package)/Author()/Producer(dvipdfm)/Keywords()>>}
-{papersize=597.50787pt,845.04684pt}
-{pdf:dest (page.1) [@thispage /XYZ @xpos @ypos null]}
-{pdf:pagesize width 597.50787pt height 845.04684pt}
-{color push  Black}
-{color pop}
-{pdf:docview<</OpenAction[@page1/Fit]/PageMode/UseOutlines>>}
-{pdf:dest (Doc-Start) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-[2]
-{pdf:dest (page.2) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color push  Black}
-{color pop}
-[3]
-{pdf:dest (page.3) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{background rgb 1 0 0}
-{color push  Black}
-{color pop}
-[4]
-{pdf:dest (page.4) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color push  Black}
-{color pop}
-[5]
-{pdf:dest (page.5) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color push  Black}
-{color pop}
-[6]
-{pdf:dest (page.6) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{background gray 1}
-{color push  Black}
-{color pop}
-[7]
-{pdf:dest (page.7) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color push  Black}
-{color pop}
-[8]
-{pdf:dest (page.8) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color push rgb 1 0 0}
-{color push  Black}
-{color pop}
-[9]
-{pdf:dest (page.9) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color push  Black}
-{color pop}
-[10]
-{pdf:dest (page.10) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color pop}
-{color push  Black}
-{color pop}
-[11]
-{pdf:dest (page.11) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color push  Black}
-{color pop}
-[12]
-{pdf:dest (page.12) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{pdf:bann<</Type/Annot/Subtype/Link/Border[0 0 0]/H/I/C[0 1 1]/A<</S/URI/URI(https://ctan.org/)>>>>}
-{color push cmyk 0 1 0 0}
-{color pop}
-{pdf:eann}
-{pdf:bann<</Type/Annot/Subtype/Link/Border[0 0 0]/H/I/C[0 1 1]/A<</S/URI/URI(https://tug.org/)>>>>}
-{color push cmyk 0 1 0 0}
-{color push  Black}
-{color pop}
-[13]
-{pdf:dest (page.13) [@thispage /XYZ @xpos @ypos null]}
-{color push  Black}
-{color pop}
-{color pop}
-{pdf:eann}
-{pdf:bann<</Type/Annot/Subtype/Link/Border[0 0 0]/H/I/C[0 1 1]/A<</S/URI/URI(https://ctan.org/)>>>>}
-{color push cmyk 0 1 0 0}
-{color pop}
-{pdf:eann}
-{color push  Black}
-{color pop}
