@@ -1,37 +1,0 @@
-\documentclass[a4paper,dvipdfmx]{article}
-\usepackage{color}
-\usepackage[colorlinks=true]{hyperref}
-\textheight3cm
-\begin{document}
-\Huge
-white
-\newpage
-white
-\newpage
-\pagecolor{red}
-red
-\newpage
-red
-\newpage
-red
-\newpage
-\pagecolor{white}
-white
-\newpage
-black
-\newpage
-{\color{red}
-red
-\newpage
-red
-\newpage
-red}
-\newpage
-black
-\newpage
-Here starts hyperlink:
-\href{https://ctan.org/}{CTAN} ended.
-\href{https://tug.org/}%
-{TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG TUG}
-Again starts hyperlink: \href{https://ctan.org/}{CTAN} all done!
-\end{document}
